--- a/app/src/main/res/layout/fragment_coin.xml
+++ b/app/src/main/res/layout/fragment_coin.xml
@@ -1,14 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.CoinFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+        <variable
+            name="Coin"
+            type="com.tolgakurucay.cryptotolga.model.Coin" />
+
+    </data>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
 
-</FrameLayout>
+        tools:context=".view.CoinFragment">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:downloadImage="@{Coin.url}"
+            android:layout_marginTop="20dp"
+
+            android:layout_gravity="center">
+
+
+        </ImageView>
+        <ProgressBar
+            android:id="@+id/selectedCryptoLoading"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:value="false"
+            android:layout_height="wrap_content">
+
+        </ProgressBar>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:text="Coin Name : "
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp">
+
+                </TextView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:text="Coin Code : "
+                    android:layout_gravity="end"
+                    android:layout_marginTop="30dp"
+                    >
+
+
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:text="Coin Price : "
+                    android:layout_gravity="end"
+                    android:layout_marginTop="30dp"
+                    >
+
+
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:text="Coin MarketCap : "
+                    android:layout_gravity="end"
+                    android:layout_marginTop="30dp"
+                    >
+
+
+                </TextView>
+
+
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/coinName"
+                    android:layout_width="wrap_content"
+                    android:text="@{Coin.coinName}"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp">
+
+                </TextView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{Coin.name}"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="30dp"
+                    >
+
+
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{Coin.price}"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="30dp"
+                    >
+
+
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{Coin.marketCap}"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="start"
+                    android:layout_marginTop="30dp"
+                    >
+
+
+                </TextView>
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</layout>
+
