--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_feed" >
         <action
             android:id="@+id/action_feedFragment_to_coinFragment"
-            app:destination="@id/coinFragment" />
+            app:destination="@id/coinFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/coinFragment"
@@ -21,10 +23,16 @@
         tools:layout="@layout/fragment_coin" >
         <action
             android:id="@+id/action_coinFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
+            app:destination="@id/feedFragment"
+            app:enterAnim="@android:anim/slide_out_right"
+            app:exitAnim="@android:anim/slide_out_right" />
         <argument
-            android:name="coinuuid"
-            app:argType="integer"
+            android:name="coinId"
+            app:argType="string"
             android:defaultValue="0" />
+        <argument
+            android:name="currency"
+            app:argType="string"
+            android:defaultValue="USD" />
     </fragment>
 </navigation>
