--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gold">#9E9D24</color>
+    <color name="loginBackground">#69946A</color>
+    <color name="buttonTextColor">#BCC9AD</color>
 </resources>
