--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -15,6 +15,9 @@
             app:destination="@id/coinFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
+            android:id="@+id/action_feedFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/coinFragment"
@@ -34,6 +37,9 @@
             android:name="currency"
             app:argType="string"
             android:defaultValue="USD" />
+        <action
+            android:id="@+id/action_coinFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
